[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "ses-agency"
version = "0.0.0"  # Supplied by dynamic versioning, no need to update.
description = "Collection of AI Agents to build agencies for specific tasks"
authors = [
    "Renke Hohl <renke.hohl@schmidt-embedded-systems.de>"
]
readme = "README.md"
license = "MIT"
packages = [
    {include = "ses_agency"}
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
keywords = ["AI", "Agency", "Agents", "LLM"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
transformers = "^4.45.2"
torch = "^2.5.1"
tqdm = "^4.66.1"
numpy = ">=1.23"
pydantic-ai = ">=0.0.0"
openai = ">=1.57.0"

[tool.poetry.group.test.dependencies]
ruff = ">=0.2.2"
pytest = ">=8.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = true
style = "semver"

[project.optional-dependencies]
lint = ["flake8"]
test = ["pytest", "mypy"]


[tool.ruff]
exclude = ["_version.py", "metasyn/distribution/legacy.*"]
line-length = 100
select = ["E", "F", "W", "I", "N", "D"]

[[tool.mypy.overrides]]
module = [
    # "scipy.*",
    # "pandas.*",
]
ignore_missing_imports = true
